apps/test/app/layout.tsx
import type { Metadata } from 'next';
import { Geist, Geist_Mono } from 'next/font/google';
import { TernSecureProvider } from '@tern-secure/nextjs';
import { ThemeProvider } from '@/components/theme-provider';
import { Header } from '@/components/header';
import './globals.css';

const geistSans = Geist({
  variable: '--font-geist-sans',
  subsets: ['latin'],
});

const geistMono = Geist_Mono({
  variable: '--font-geist-mono',
  subsets: ['latin'],
});

export const metadata: Metadata = {
  title: 'Create Next App',
  description: 'Generated by create next app',
};

export default async function RootLayout({
  children,
}: Readonly<{
  children: React.ReactNode;
}>) {
  return (
    <html
      lang='en'
      suppressHydrationWarning
    >
      <body className={`${geistSans.variable} ${geistMono.variable} antialiased`}>
        <TernSecureProvider
          appName='TernSecure'
          //appCheck={{
          //  provider: 'reCaptchaV3',
          //  siteKey: '6LfzGRgsAAAAAGEvbwbcLgT4IHWmuWv4kEDRA5hi',
            //siteKey: '6Lc2aCIsAAAAAAZ2fYnqkPGqGnlsi6KE94qEzGKX',
            //siteKey: '6LfophwsAAAAAMvW43vd87iiuBCWDRYQZGS0rsRH',
          //  isTokenAutoRefreshEnabled: true,
          //  debugToken: process.env.FIREBASE_APPCHECK_DEBUG_TOKEN || false,
         //</body> }}
          //requiresVerification={false}
          persistence='browserCookie'
          ternUIUrl='http://localhost:4000/ternsecure.browser.js'
          apiUrl='localhost:3000'
        >
          <ThemeProvider
            attribute='class'
            defaultTheme='light'
            enableSystem
            disableTransitionOnChange
          >
            <Header />
            {children}
          </ThemeProvider>
        </TernSecureProvider>
      </body>
    </html>
  );
}


// appverifier seems not need if we use appcheck provider v3

// sms recapther returns an error apikey not found when firebase initiliaze appcheck with an enteprise provider
// key. the same enterpise provider key is used in the firebase reCaptcha (Configured platform site keys). 
// if appcheck is removed, the sms recaptcha works fine. 
// error: Invalid site key or not loaded in api.js: Recaptchar_enterprise_SiteKey
// as long as appcheck is using reCaptcha enterprise provider, the sms recaptcha will not work.